--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -284,6 +284,12 @@
 				<version>${pyramus.version}</version>
 			</dependency>
 
+      <dependency>
+        <groupId>fi.otavanopisto.pyramus</groupId>
+        <artifactId>muikku-plugin</artifactId>
+        <version>${pyramus.version}</version>
+      </dependency>
+
 			<dependency>
 				<groupId>fi.otavanopisto.pyramus</groupId>
 				<artifactId>googleoauth-plugin</artifactId>
